// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

import "postgres-util/src/desc.proto";
import "proto/src/proto.proto";
import "repr/src/chrono.proto";
import "repr/src/global_id.proto";
import "repr/src/relation_and_scalar.proto";
import "repr/src/row.proto";
import "storage/src/controller.proto";
import "storage/src/types/connections.proto";
import "storage/src/types/connections/aws.proto";
import "storage/src/types/errors.proto";
import "storage/src/types/sources/encoding.proto";

package mz_storage.types.sources;

message ProtoMzOffset {
  uint64 offset = 1;
}


message ProtoIncludedColumnSource {
    oneof kind {
        google.protobuf.Empty partition = 1;
        google.protobuf.Empty offset = 2;
        google.protobuf.Empty timestamp = 3;
        google.protobuf.Empty topic = 4;
        google.protobuf.Empty headers = 5;
    }
}

message ProtoKeyEnvelope {
    oneof kind {
        google.protobuf.Empty none = 1;
        google.protobuf.Empty flattened = 2;
        string named = 3;
    }
}

message ProtoTimeline {
    oneof kind {
        google.protobuf.Empty epoch_milliseconds = 1;
        string external = 2;
        string user = 3;
    }
}

message ProtoSourceEnvelope {
    oneof kind {
        ProtoNoneEnvelope none = 1;
        ProtoDebeziumEnvelope debezium = 2;
        ProtoUpsertEnvelope upsert = 3;
        google.protobuf.Empty cdc_v2 = 4;
    }
}

message ProtoNoneEnvelope {
    ProtoKeyEnvelope key_envelope = 1;
    uint64 key_arity = 2;
}

message ProtoUpsertEnvelope {
    ProtoUpsertStyle style = 1;
    repeated uint64 key_indices = 2;
}

message ProtoUpsertStyle {
    message ProtoDebezium {
        uint64 after_idx = 1;
    }

    oneof kind {
        ProtoKeyEnvelope default = 1;
        ProtoDebezium debezium = 2;
    }
}

message ProtoIncludedColumnPos {
    string name = 1;
    uint64 pos = 2;
}

message ProtoDebeziumEnvelope {
    uint64 before_idx = 1;
    uint64 after_idx = 2;
    ProtoDebeziumDedupProjection dedup = 3;
}

message ProtoDebeziumTransactionMetadata {
    mz_repr.global_id.ProtoGlobalId tx_metadata_global_id = 1;
    uint64 tx_status_idx = 2;
    uint64 tx_transaction_id_idx = 3;
    uint64 tx_data_collections_idx = 4;
    uint64 tx_data_collections_data_collection_idx = 5;
    uint64 tx_data_collections_event_count_idx = 6;
    string tx_data_collection_name = 7;
    uint64 data_transaction_idx = 8;
    uint64 data_transaction_id_idx = 9;
}

message ProtoDebeziumDedupProjection {
    uint64 op_idx = 1;
    uint64 source_idx = 2;
    uint64 snapshot_idx = 3;
    ProtoDebeziumSourceProjection source_projection = 4;
    ProtoDebeziumTransactionMetadata tx_metadata = 6;
}

message ProtoDebeziumSourceProjection {
    message ProtoMySql {
        uint64 file = 1;
        uint64 pos = 2;
        uint64 row = 3;
    }

    message ProtoPostgres {
        uint64 sequence = 1;
        uint64 lsn = 2;
    }

    message ProtoSqlServer {
        uint64 change_lsn = 1;
        uint64 event_serial_no = 2;
    }

    oneof kind {
        ProtoMySql my_sql = 1;
        ProtoPostgres postgres = 2;
        ProtoSqlServer sql_server = 3;
    }
}

message ProtoKafkaSourceConnection {
    mz_storage.types.connections.ProtoKafkaConnection connection = 1;
    string topic = 2;
    map<int32, ProtoMzOffset> start_offsets = 3;
    optional string group_id_prefix = 4;
    mz_proto.ProtoU128 environment_id = 5;
    ProtoIncludedColumnPos include_timestamp = 6;
    ProtoIncludedColumnPos include_partition = 7;
    ProtoIncludedColumnPos include_topic = 8;
    ProtoIncludedColumnPos include_offset = 9;
    ProtoIncludedColumnPos include_headers = 10;
    map<string, mz_storage.types.connections.ProtoStringOrSecret> options = 11;
}

message ProtoSourceDesc {
    ProtoSourceConnection connection = 1;
    mz_storage.types.sources.encoding.ProtoSourceDataEncoding encoding = 2;
    ProtoSourceEnvelope envelope = 3;
    repeated ProtoIncludedColumnSource metadata_columns = 4;
    mz_proto.ProtoDuration timestamp_interval = 5;
}

message ProtoSourceConnection {
    reserved 5;
    oneof kind {
        ProtoKafkaSourceConnection kafka = 1;
        ProtoKinesisSourceConnection kinesis = 2;
        ProtoS3SourceConnection s3 = 3;
        ProtoPostgresSourceConnection postgres = 4;
        ProtoLoadGeneratorSourceConnection loadgen = 6;
    }
}

message ProtoSourceData {
    oneof kind {
        mz_repr.row.ProtoRow ok = 1;
        errors.ProtoDataflowError err = 2;
    }
}

message ProtoKinesisSourceConnection {
    string stream_name = 1;
    mz_storage.types.connections.aws.ProtoAwsConfig aws = 2;
}

message ProtoPostgresSourceConnection {
    mz_storage.types.connections.ProtoPostgresConnection connection = 1;
    string publication = 2;
    ProtoPostgresSourceDetails details = 4;
}

message ProtoPostgresSourceDetails {
    repeated mz_postgres_util.desc.ProtoPostgresTableDesc tables = 1;
    string slot = 2;
}

message ProtoLoadGeneratorSourceConnection {
    oneof generator {
        google.protobuf.Empty counter = 1;
        google.protobuf.Empty auction = 3;
    }
    optional uint64 tick_micros = 2;
}

message ProtoS3SourceConnection {
    repeated ProtoS3KeySource key_sources = 1;
    optional string pattern = 2;
    mz_storage.types.connections.aws.ProtoAwsConfig aws = 3;
    ProtoCompression compression = 4;
}

message ProtoS3KeySource {
    oneof kind {
        string scan = 1;
        string sqs_notifications = 2;
    }
}

message ProtoCompression {
    oneof kind {
        google.protobuf.Empty gzip = 1;
        google.protobuf.Empty none = 2;
    }
}

message ProtoIngestionDescription {
    // ProtoSourceImport is taken by ProtoDataflowDescription
    message ProtoSourceMetadataImport {
        mz_repr.global_id.ProtoGlobalId id = 1;
        mz_storage.controller.ProtoCollectionMetadata storage_metadata = 2;
    }
    repeated ProtoSourceMetadataImport source_imports = 1;
    ProtoSourceDesc desc = 2;
    mz_storage.controller.ProtoCollectionMetadata storage_metadata = 3;
    mz_repr.relation_and_scalar.ProtoRelationType typ = 4;
}
